--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -9,7 +9,7 @@
   {% endstylesheets %}
 {% endblock %}
 
-{% block content %}
+{% block container %}
   <div id="error-page">
     <h2>Server Error</h2>
     <h3>There is something wrong with us. If the problem persist please kindly tell us <a href="{{ path('adstacy_app_contact') }}">here</h3>
