--- a/src/Adstacy/AppBundle/Resources/public/less/layout/error.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/error.less
@@ -1,16 +1,18 @@
 @import "../variables.less";
 
 #error-page {
-  margin-top: 50px;
+  padding: 100px 0;
   text-align: center;
   color: @gray-dark;
   h2 {
     font-size: 6em;
     margin-bottom: 30px;
+    font-weight: 300;
   }
   h3 {
     font-size: 2em;
     margin-bottom: 50px;
+    font-weight: 300;
   }
   a {
     margin-right: 20px;
