Remove warning from form error.

--- a/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
@@ -23,7 +23,7 @@
       {% for error in errors %}
       <div class="alert alert-error alert-dismissable">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-        <strong>Warning</strong>! {{ error.message }}
+        {{ error.message }}
       </div>
       {% endfor %}
     {% endif %}
