Enhange delete comment js

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -264,9 +264,12 @@
   display: none;
   font-size: 14px;
   color: #999;
+  border: 0;
+  background: none;
 
   &:hover {
     text-decoration: none;
+    color: #666;
   }
 }
 .comment {
