Fixed create ad responsiveness. [Need to order editor toolbar]

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -136,3 +136,18 @@
 
   }
 }
+
+@media (max-width: 481px) {
+  #create-advert {
+    width: 100%;
+  }
+  .adstacy-single-col {
+    min-width: 200px;
+  }
+}
+
+@media (max-width: 321px) {
+  #create-advert-toolbar .text {
+    display: none;
+  }
+}
