settings now responsive.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -38,9 +38,10 @@ a.mention:hover {
 }
 
 .adstacy-single-col {
-  min-width: 500px;
+  // min-width: 500px;
+  min-width: 320px;
   max-width: 1024px;
-  padding: (@navbar-height + 30px) 0 30px;
+  padding: (@navbar-height + 30px) 15px 30px;
   margin: 0 auto;
 
   .column {
