--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -273,8 +273,20 @@ body {
 }
 
 .site-body {
-  margin: 0 30px;
+  margin: 0 15px;
+
+  @media (min-width: 960px) {
+    float: left;
+    margin: 0 30px;
+    min-width: 500px;
+
+    .panel {
+      margin: 0;
+      border: 0;
+    }
+  }
 }
+
 .site-body-bg {
   background: #fff;
   border-radius: 5px;
@@ -342,15 +354,6 @@ body {
 }
 
 @media (min-width: 960px) {
-  .site-body {
-    float: left;
-    min-width: 500px;
-
-    .panel {
-      margin: 0;
-      border: 0;
-    }
-  }
   .site-body-full {
     width: 100%;
   }
