--- a/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
@@ -32,7 +32,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="settings">
+  <div id="settings" class="adstacy-container">
     <div class="panel panel-default">
       <div class="panel-heading"><h2>Settings</h2></div>
       <div class="panel-body">
