--- a/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
@@ -81,8 +81,8 @@
     <div id="wysihtml5-editor-toolbar">
       <header>
         <ul class="commands">
-          <li data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h2" title="Insert Title" class="command">Title</li>
-          <li data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3" title="Insert Subtitle" class="command">Subtitle</li>
+          <li data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h2" title="Insert Title" class="command">H1</li>
+          <li data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3" title="Insert Subtitle" class="command">H2</li>
           <li data-wysihtml5-command="strong" title="Make text bold (CTRL + B)" class="command"><i class="icon icon-bold"></i></li>
           <li data-wysihtml5-command="italic" title="Make text italic (CTRL + I)" class="command"><i class="icon icon-italic"></i></li>
           <li data-wysihtml5-command="justifyLeft" title="Align left" class="command"><i class="icon icon-align-left"></i></li>
