--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -139,6 +139,7 @@
               <ul>
                 <li><h3>FAVOURITES</h3></li>
                 {% include 'AdstacyAppBundle:App:tag_list.html.twig' %}
+                <li><a class="more" href="{{ path('adstacy_app_tags') }}">{{"more_tags"|trans}}</a></li>
               </ul>
               <ul>
                 <li><h3>SITE INFO</h3></li>
