add state to navbar toggle.

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,12 +1,12 @@
 <header id="site-header" class="site-header navbar navbar-default navbar-fixed-top">
   <nav class="site-wrapper">
     <div class="navbar-header navbar-left">
-      <a id="site-menu-toggle" href="#" class="navbar-toggle">
+      <button id="site-menu-toggle" class="btn navbar-toggle" data-toggle="button">
         <span class="sr-only">Toggle navigation</span>
         <i class="icon-bar"></i>
         <i class="icon-bar"></i>
         <i class="icon-bar"></i>
-      </a>
+      </button>
       <a class="navbar-brand" href="{{ path('homepage') }}" title="Adstacy">Adstacy</a>
     </div>
 
