--- a/src/Adstacy/AppBundle/Resources/views/App/tag_list.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/tag_list.html.twig
@@ -2,7 +2,7 @@
 {% if app.user %}
   {% set tags = app.user.favouriteTags %}
   {% for tag in app.user.favouriteTags %}
-  <li><a href="{{ path('adstacy_app_search', {q: tag}) }}" title="{{tag|title}}">{{tag|title}}</a></li>
+  <li data-tag="{{ tag }}"><a href="{{ path('adstacy_app_search', {q: tag}) }}" title="{{tag|title}}">{{tag|title}}</a></li>
   {% endfor %}
 {% endif %}
 
