Add trending sidebar ajax.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
@@ -29,6 +29,10 @@
     width: 250px;
   }
 }
+.sidebar-trending-advert {
+  margin-bottom: 10px;
+  min-height: 50px;
+}
 #sidebar-trending {
   img {
     max-width: 260px;
