--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -168,7 +168,12 @@
             {% if not is_mobile() %}
             <div id="sidebar" class="site-sidebar fade-hover">
               {% block sidebar %}
-              {{ render_sidebar_trending() }}
+                <div id="sidebar-trending" class="site-aside" style="display: none;">
+                  <h2><a href="{{ path('adstacy_app_trending') }}">Trending</a></h2>
+                </div>
+                <div id="side-suggest-friend" class="side-aside" style="display: none;">
+                  <h2><a href="{{ path('adstacy_app_who_to_follow') }}">People you may know</a></h2>
+                </div>
               {% endblock %}
             </div>
             {% endif %}
