--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -53,7 +53,7 @@
       color: @brand-primary;
     }
     .media-heading a:not(.btn) {
-      color: #666; 
+      color: #666;
     }
   }
 }
@@ -80,7 +80,6 @@ a.realname, a.username {
 #user-profile {
   border-radius: 5px;
   margin-bottom: 10px;
-  // width: 500px;
 
   .media-object {
     border-radius: 5px;
@@ -100,47 +99,60 @@ a.realname, a.username {
     }
   }
 
-  .user-action {
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee;
-    a.score {
-      display: block;
-      float: left;
-      padding: 5px 10px;
-      background-color: #fff;
-      color: #999;
-      font-size: 10px;
-      border-right: 1px solid #eee;
-      width: 91px;
-      line-height: 1.2;
-      &:hover {
-        text-decoration: none;
-        background-color: #eee;
-      }
-    }
-    a.score.first {
-      border-bottom-left-radius: 5px;
-    }
-    a.score.last {
-      border-right: 0;
-    }
-    strong {
-      display: block;
-      color: #555;
-      font-size: 16px;
-    }
-    .btn {
-      float: right;
-      margin-right: 8px;
-      margin-top: 4px;
-    }
-  }
-
   .media-heading {
     margin: 0 0 5px;
 
     a {
       color: @brand-primary;
+    }
+  }
+}
+
+.user-action {
+  .score {
+    display: block;
+    padding: 5px 10px;
+    background-color: #fff;
+    color: #999;
+    font-size: 10px;
+    line-height: 1.2;
+    border-top: 1px solid @border-color;
+    &:hover {
+      text-decoration: none;
+      background-color: #eee;
+    }
+    &.last {
+      .border-bottom-radius(@border-radius-base);
+    }
+  }
+
+  strong {
+    display: block;
+    color: #555;
+    font-size: 16px;
+  }
+
+  .btn {
+    float: right;
+    margin-right: 8px;
+    margin-top: 4px;
+  }
+
+  @media screen and (min-width: 481px) {
+    border-top: 1px solid #ddd;
+
+    .score {
+      float: left;
+      border-right: 1px solid #ddd;
+      width: 91px;
+      border-top: 0;
+      &.first {
+        border-bottom-left-radius: @border-radius-base;
+      }
+      &.last {
+        border-right: 0;
+        border-radius: 0;
+      }
     }
   }
 }
