--- a/src/Adstacy/AppBundle/Resources/public/less/layout/who-to-follow.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/who-to-follow.less
@@ -42,4 +42,11 @@
       color: #fff;
     }
   }
+  .user {
+    @media screen and (min-width: 481px) {
+      .user-detail {
+        display: inline;
+      }
+    }
+  }
 }
