Fix header logo.

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -7,7 +7,7 @@
         <i class="icon-bar"></i>
         <i class="icon-bar"></i>
       </button>
-      <a class="navbar-brand" href="{{ path('homepage') }}" title="Adstacy">Adstacy</a>
+      <a class="navbar-brand" href="{{ path('homepage') }}" title="Adstacy"><img src="{{ asset('bundles/adstacyapp/img/logo.png') }}"></a>
     </div>
 
     <div class="search-container">
