--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -187,8 +187,8 @@ body {
 .navbar-brand {
   width: @site-menu-width;
   display: none;
-  text-indent: -9999px;
-  background: url("../img/logo.png") center no-repeat;
+  padding: 0;
+  text-align: center;
 }
 
 #m-btn-search {
