Fix trending css.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
@@ -36,6 +36,10 @@
     &:hover {
       background: #333;
     }
+    h3 {
+      margin: 0;
+      font-size: 20px;
+    }
   }
   .sidebar-trending-img {
     width: 260px;
