--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-sidebar.less
@@ -1,13 +1,16 @@
 #sidebar {
   .site-aside {
     margin-bottom: 20px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 0 4px #999;
   }
 
   h2 {
-    border-bottom: 1px solid #d5d5d5;
     font-size: 20px;
     margin-top: 0;
-    padding-bottom: 5px;
+    text-shadow: 0 1px 1px #ccc;
     a {
       color: #555;
       text-decoration: none;
@@ -23,11 +26,14 @@
 }
 #sidebar-trending {
   img {
-    max-width: 260px;
+    max-width: 240px;
+    border-radius: 5px;
   }
   .sidebar-trending-img, .sidebar-trending-youtube, .sidebar-trending-text {
     display: block;
     background-color: #000;
+    border-radius: 5px;
+    box-shadow: 0 0 2px #555;
   }
   .sidebar-trending-text {
     padding: 10px;
@@ -42,7 +48,7 @@
     }
   }
   .sidebar-trending-img {
-    width: 260px;
+    width: 240px;
     text-align: center;
   }
 }
@@ -56,6 +62,7 @@
     color: #333;
     font-size: 13px;
     margin-bottom: 5px;
+    width: 180px;
   }
 
   .btn-sm {
