--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -171,7 +171,7 @@
                 <div id="sidebar-trending" class="site-aside" style="display: none;">
                   <h2><a href="{{ path('adstacy_app_trending') }}">Trending</a></h2>
                 </div>
-                <div id="side-suggest-friend" class="side-aside" style="display: none;">
+                <div id="side-suggest-friend" class="site-aside" style="display: none;">
                   <h2><a href="{{ path('adstacy_app_who_to_follow') }}">People you may know</a></h2>
                 </div>
               {% endblock %}
