--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -214,11 +214,10 @@ a.realname, a.username {
     height: 35px;
     margin-right: 10px;
   }
-  padding: 5px 0;
-  border-bottom: 1px solid #ccc;
-  &:first-child {
-    border-top: 1px solid #ccc;
-  }
+  border: 1px solid #ccc;
+  box-shadow: 0 0 2px #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 // @media screen and (max-width: @screen-phone) {
