fix video loading and profile responsiveness.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -32,6 +32,7 @@
 
 .advert-object.static {
   line-height: 0;
+  background: #000;
 }
 
 .advert-object.limit {
@@ -340,7 +341,7 @@
     margin-right: 10px;
   }
 
-  time {
+  .timeago {
     color: #aaa;
     font-size: 12px;
     float: right;
