--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -110,8 +110,7 @@ a.realname, a.username {
 
   .btn-follow {
     float: right;
-    margin-right: 10px;
-    margin-top: 5px;
+    margin: 5px 10px;
   }
 }
 
@@ -146,7 +145,7 @@ a.realname, a.username {
     .score {
       float: left;
       border-right: 1px solid #ddd;
-      width: 91px;
+      width: 85px;
       border-top: 0;
       &.first {
         border-bottom-left-radius: @border-radius-base;
