split site-header.less style to site container.less

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -55,6 +55,7 @@
 @import "./base/layout.less";
 
 @import "./layout/site-header.less";
+@import "./layout/site-container.less";
 @import "./layout/site-sidebar.less";
 @import "./layout/ad.less";
 @import "./layout/feeds.less";
