Remove favourite tag on menu.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -136,7 +136,7 @@
                   </li>
                 {% endif %}
               </ul>
-              <ul id="favourites">
+              <ul id="favourites" class="clearfix">
                 <li><h3>FAVOURITES</h3></li>
                 {% include 'AdstacyAppBundle:App:tag_list.html.twig' %}
                 <li><a class="more" href="{{ path('adstacy_app_tags') }}">{{"more_tags"|trans}}</a></li>
