--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -93,6 +93,22 @@ body {
   }
 }
 
+#favourites {
+  a {
+    width: 170px;
+    float: left;
+  }
+  button {
+    float: right;
+    margin-right: 10px;
+    border: 0;
+    background: none;
+    &:hover {
+      color: #b00;
+    }
+  }
+}
+
 .site-user-menu {
   padding: 20px 20px 10px 20px;
   white-space: nowrap;
